# rag-driven-computer-use

./: .env.example  .gitignore  CLAUDE.md  README.md  browser_fix.bat  browser_test.html  complete_rocket_chat_crawler.py  comprehensive_rocket_chat_crawler.py  crawl_and_push.py  crawl_and_push_debug.py  crawl_and_push_final.py  cypher-shell.bat  fast_rocket_chat_crawler.py  full_state_graph_crawler.py  main.py  neo4j_queries.md  package-lock.json  package.json  pyproject.toml  query_neo4j.py  requirements.txt  rocket_chat_api_crawler.py  rocket_chat_crawler.py  simple_crawl.py  simple_rocket_chat_test.py  state_graph_crawler.py  state_graph_crawler_crawl4ai.py  test_neo4j_connection.py  tsconfig.json
.claude/: settings.local.json
.github/workflows/: README-act.md  e2e.yml
agent/: bedrock.py  bedrock_agent.py  cache_utils.py  config.py  prompt.py  schema_utils.py  tools.py
benchmarks/: README.md
benchmarks/setup/: README.md  setup-auth.sh  start-shopping-admin.sh  verify-services.sh
benchmarks/webarena-shopping-admin/: README.md
crawler/: constants.py  crawler.py  database.py  interactions.py  main.py  models.py  snapshots.py  utils.py
evaluations/task_109/: 2025-10-25T08-52-36.json  MEMO.md
evaluations/task_123/: 2025-10-22T16-47-36.webm  2025-10-22T16-47-46.json
evaluations/task_127/: 2025-10-22T16-51-36.json  2025-10-22T16-51-36.webm
evaluations/task_131/: 2025-10-22T17-02-38.json
evaluations/task_15/: 2025-10-19T03-10-26.json  (+1 more)
scripts/: evaluate_webarena.py
src/: config.ts  crawler.ts  database.ts  engine.ts  interactions.ts  main.ts  snapshots.ts  types.ts  utils.ts
tests/: test_bedrock_agent.py  test_utilities.py
utilities/: crawler.py  neo4j_utils.py
(+133 files in other folders)
